# notion-picker

./: Cargo.toml
src/: collector.rs  main.rs
src/collector/: get_all_database_entries.rs  get_database_by_name.rs
