[package]
name = "notion-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
notion = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
